--- a/application/admin/view/check/article.html
+++ b/application/admin/view/check/article.html
@@ -11,7 +11,7 @@
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索预约','/admin/check/searchA?type='+type,800,480)">
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','/admin/check/searchA?type='+type,800,480)">
                     <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
             </div>
