--- a/application/admin/view/company/add.html
+++ b/application/admin/view/company/add.html
@@ -47,7 +47,7 @@
             <div class="layui-form-item">
                 <label class="layui-form-label">公司电话</label>
                 <div class="layui-input-block">
-                    <input type="text" id="phone" name="phone" lay-verify="required" autocomplete="off"
+                    <input type="number" name="phone" lay-verify="required|phone|number" autocomplete="off"
                         placeholder="请输入公司电话" class="layui-input">
                 </div>
             </div>
