--- a/application/admin/view/company/team_add.html
+++ b/application/admin/view/company/team_add.html
@@ -13,10 +13,7 @@
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
-                    <i class="layui-icon layui-icon-delete"></i>批量删除
-                </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加轮播图','bannerAdd.html',800,480)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加轮播图
+                    <i class="layui-icon layui-icon-delete"></i>批量添加
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
@@ -28,6 +25,8 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var company_id = '{$company_id}';
+    var type = '{$type}';
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -37,36 +36,23 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/banner/index' //数据接口
+            , url: '/admin/company/addTeam' //数据接口
             , page: true //开启分页
-            , limit: 20
+            , limit: 10
+            , where:{type:type,company_id:company_id}
             , id: 'banner'
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left',width:'5%' }
                     , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'title', title: '标题', width: '15%' }
-                    , { field: 'img', title: '轮播图', width: '20%',
-                        templet:function(d){
-                            return '<img class="logo-img" src="'+d.thumb+'"/>';
-                        }
-                    }
-                    , { field: 'area', title: '所属站点', width: '15%',
-                        templet:function(d){
-                            var can_used = '总站';
-                            if(d.county){
-                                can_used = d.province_name + '-' + d.city_name + '-' + d.county_name;
-                            }
-                            return can_used;
-                        }
-                    }
-                    , { field: 'sort', title: '排序', width: '10%', }
-                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , { field: 'name', title: '姓名', width: '15%' }
+                    , { field: 'title', title: '工龄', width: '20%',}
+                    , { field: 'type_title', title: '等级', width: '20%'}
+                    , { field: 'mobile', title: '联系电话', width: '20%', }
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑轮播图\',\'/admin/banner/bannerEdit?id=' + d.id + '\',800,480);">编辑</button>'+
-                            '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">添加</button>';
                             return handle;
                         }
                     }
@@ -74,7 +60,7 @@
             ]
         });
         /**
-         * 监听批量删除 
+         * 监听批量添加 
         */
         table.on('toolbar(banner)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id);
@@ -91,38 +77,38 @@
         });
     });
     /**
-     * 批量删除
+     * 批量添加
     */
     function delAll(argument) {
         if (argument == '') {
             layer.msg('没有选中的数据', { icon: 5 });
         } else {
             argument = argument.toString();
-            layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/banner/bannerDel', { id: argument }, function (j) {
+            layer.confirm('确认要全部添加吗？', function (index) {
+                $.post('/admin/company/teamBind', { id: argument,type:type,company_id:company_id }, function (j) {
                     if (j.code == 200) {
-                        layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
+                        layer.msg('添加成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
                         });
                     } else {
-                        layer.msg('删除失败', { icon: 5, time: 1000 });
+                        layer.msg('添加失败', { icon: 5, time: 1000 });
                     }
                 }, 'json');
             });
         }
     }
     /**
-     * 单个删除
+     * 单个添加
     */
     function delUser(id) {
-        layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/banner/bannerDel', { id: id }, function (j) {
+        layer.confirm('确认要添加吗？', function (index) {
+            $.post('/admin/company/teamBind', { id: id,type:type,company_id:company_id }, function (j) {
                 if (j.code == 200) {
-                    layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
+                    layer.msg('添加成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
                     });
                 } else {
-                    layer.msg('删除失败', { icon: 5, time: 1000 });
+                    layer.msg('添加失败', { icon: 5, time: 1000 });
                 }
             }, 'json');
         });
