--- a/application/admin/view/notice/index.html
+++ b/application/admin/view/notice/index.html
@@ -43,7 +43,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'title', title: '标题' }
                     , { field: 'name', title: '所属站点', width: '15%' }
                     , {
