--- a/application/admin/view/branch/index.html
+++ b/application/admin/view/branch/index.html
@@ -43,7 +43,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'branch_name', title: '分站名称', width: '15%' }
                     , { field: 'branch_pinyin', title: '域名前缀', width: '15%' }
                     , {
