--- a/application/admin/view/building/log.html
+++ b/application/admin/view/building/log.html
@@ -44,7 +44,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'title', title: '日记标题', width: '15%' }
                     , { field: 'speed_name', title: '进度', width: '15%', }
                     , { field: 'create_time', title: '创建时间', width: '15%' }
