--- a/application/admin/view/cases/img.html
+++ b/application/admin/view/cases/img.html
@@ -35,7 +35,7 @@
                 , cols: [
                     [ //表头
                         { type: 'checkbox', fixed: 'left' }
-                        , { field: 'id', title: 'ID', width: '15%', fixed: 'left' }
+                        , { field: 'id', title: 'ID', width: '15%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                         , { field: 'img', title: '图片', width: '30%' ,
                             templet:function(d){
                                 if(d.img){
