--- a/application/admin/view/company/team.html
+++ b/application/admin/view/company/team.html
@@ -1,28 +1,28 @@
 {include file="public/head"}
-<style>
-    .logo-img{
-        width: 50px;
-    }
-</style>
+
 <body>
     <div class="x-body">
-        <div class="layui-form">
-            <table id="demo" lay-filter="test"></table>
-        </div>
+        <table id="demo" lay-filter="test"></table>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加属性','attrAdd.html',600,400)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加属性
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加技工','addTeam.html?company_id={$company_id}&type=1',800,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加技工
+                </button>
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加工长','addTeam.html?company_id={$company_id}&type=2',800,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加工长
+                </button>
+                <button class="layui-btn layui-btn-sm layui-btn-normal" onclick="x_admin_show('添加设计师','addTeam.html?company_id={$company_id}&type=3',800,500)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加设计师
+                </button>
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索','searchTeam.html?company_id={$company_id}',400,280)">
+                    <i class="layui-icon layui-icon-search"></i>搜索
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
                 </button>
-                <!-- <button class="layui-btn layui-btn-sm" onclick="x_admin_show('搜索属性','search.html',800,500)">
-                    <i class="layui-icon layui-icon-search"></i>搜索
-                </button> -->
             </div>
         </script>
     </div>
@@ -30,6 +30,7 @@
 {include file="public/foot"}
 <script>
     var tableIns;
+    var company_id = '{$company_id}';
     layui.use(['laydate', 'form', 'table'], function () {
         var table = layui.table, laydate = layui.laydate, form = layui.form;
         /**
@@ -39,41 +40,32 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/company/attr' //数据接口
+            , url: '/admin/company/team' //数据接口
             , page: true //开启分页
-            , limit: 20
+            , limit: 10
             , id: 'test'
+            , where:{company_id:company_id}
             , cols: [
                 [ //表头
-                    { type: 'checkbox', fixed: 'left',width:'5%' }
+                    { type: 'checkbox', fixed: 'left', width: '5%' }
                     , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'type', title: '属性名称', width: '10%',
+                    , { field: 'type', title: '所属工位', width: '20%',
                         templet:function(d){
-                            var type = '';
-                            if(d.type == '4'){
-                                type = '服务';
-                            }else if(d.type == '5'){
-                                type = '规模';
+                            if(d.type == '1'){
+                                return '技工';
+                            }else if(d.type == '2'){
+                                return '工长';
+                            }else if(d.type == '3'){
+                                return '设计师';
                             }
-                            return type;
                         }
                     }
-                    , { field: 'title', title: '属性值', width: '25%' }
-                    , { field: 'sort', title: '排序', width: '10%' }
-                    , { field: 'status', title: '是否启用', width: '15%',
-                        templet:function(d){
-                            var can_used = '<div class="layui-input-inline">' +
-                                '<input type="checkbox" name="status" value="0" lay-skin="switch" lay-text="启用|关闭" lay-filter="cc" data-user-id="' + d.id + '" ' + (d.status == 0 ? 'checked' : '') + ' />' +
-                                '</div>';
-                            return can_used;
-                        }
-                    }
-                    , { field: 'create_time', title: '创建时间', width: '15%', }
-                    , {
-                        field: 'handle', title: '操作',width: '10%',
+                    , { field: 'uname', title: '人员姓名', width: '20%'}
+                    , { field: 'title', title: '人员工龄', width: '20%'}
+                    , { field: 'create_time', title: '加入时间', width: '15%' }
+                    , {field: 'handle', title: '操作', width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑属性\',\'/admin/company/attrEdit?id=' + d.id + '\',600,400);">编辑</button>'+
-                            '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            var handle = '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
@@ -81,7 +73,7 @@
             ]
         });
         /**
-         * 监听批量删除 
+         * 监听批量操作
         */
         table.on('toolbar(test)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id);
@@ -96,21 +88,6 @@
                     break;
             };
         });
-        /**
-         * 监听状态改变
-        */
-        form.on('switch(cc)', function (data) {
-            var t = data.elem;
-            var id = $(t).attr('data-user-id');
-            $.post('/admin/company/updateStatus', { id: id }, function (j) {
-                if (j.code == '200') {
-                    layer.msg('设置成功');
-                }
-                if (j.code == '0') {
-                    layer.msg('设置失败');
-                }
-            }, 'json');
-        });
     });
     /**
      * 批量删除
@@ -121,7 +98,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/company/attrDel', { id: argument }, function (j) {
+                $.post('/admin/company/teamDel', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -138,7 +115,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/company/attrDel', { id: id }, function (j) {
+            $.post('/admin/company/teamDel', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
