--- a/application/admin/view/designer/article.html
+++ b/application/admin/view/designer/article.html
@@ -58,7 +58,7 @@
                         }
                     }
                     , {
-                        field: 'status', title: '文章状态', width: '15%',
+                        field: 'status', title: '文章状态', width: '10%',
                         templet: function (d) {
                             /* var can_used = '<div class="layui-input-inline">' +
                                 '<input type="checkbox" name="switch" value="1" lay-skin="switch" lay-text="正常|关闭" lay-filter="cc" data-user-id="' + d.id + '" ' + (d.status == 0 ? 'checked' : '') + ' />' +
@@ -71,6 +71,7 @@
                             return can_used;
                         }
                     }
+                    , { field: 'checked_title', title: '审核', width: '5%'}
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
                         field: 'handle', title: '操作',width:'10%',
