--- a/application/admin/view/goods/goods_attr.html
+++ b/application/admin/view/goods/goods_attr.html
@@ -41,7 +41,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '属性名称', width: '10%' }
                     , { field: 'price', title: '市场价', width: '8%'}
                     , { field: 'shop_price', title: '商铺价', width: '8%'}
