--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -44,7 +44,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '商品名称' }
                     , { field: 'title', title: '副标题', width: '10%'}
                     , { field: 'thumb', title: '商品主图',width:'10%',
