--- a/application/admin/view/goods_brand/index.html
+++ b/application/admin/view/goods_brand/index.html
@@ -44,7 +44,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '品牌名称' }
                     , {
                         field: 'area', title: '品牌logo', width: '15%',
