--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -45,7 +45,7 @@
           <dd><a href="{:url('admin/user/logout')}">退出</a></dd>
         </dl>
       </li>
-      <li class="layui-nav-item to-index"><a href="javascript:;">前台首页</a></li>
+      <!-- <li class="layui-nav-item to-index"><a href="javascript:;">前台首页</a></li> -->
     </ul>
 
   </div>
