--- a/application/admin/view/member/index.html
+++ b/application/admin/view/member/index.html
@@ -38,7 +38,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '6%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '6%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'uname', title: '账号', width: '8%', }
                     , { field: 'realname', title: '姓名', width: '10%' }
                     , { field: 'type', title: '类型',width:'8%',
