--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -44,7 +44,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '商家名称', width: '15%' }
                     , { field: 'cate_title', title: '所属分类', width: '15%' }
                     , { field: 'citys', title: '所属城市', width: '15%',
