--- a/application/admin/view/shop_goods/goods_lis.html
+++ b/application/admin/view/shop_goods/goods_lis.html
@@ -54,7 +54,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox',fixed: 'left',width:'5%' }
-                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'name', title: '商品名称', width: '10%'}
                     , { field: 'title', title: '副标题', width: '10%'}
                     , { field: 'thumb', title: '商品主图', width: '10%',
