--- a/application/admin/view/shop_goods_img/shop_goods_img.html
+++ b/application/admin/view/shop_goods_img/shop_goods_img.html
@@ -43,7 +43,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left' }
-                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'img',title: '商品图片',
                         templet: function(d){
                             return '<img src="'+d.img+'" class="logo-img" />';
