--- a/application/admin/view/test/option.html
+++ b/application/admin/view/test/option.html
@@ -50,7 +50,7 @@
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left',width:'5%' }
-                    , { field: 'id', title: 'ID', width: '8%', fixed: 'left' }
+                    , { field: 'id', title: 'ID', width: '8%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
                     , { field: 'title', title: '题目名称', width: '15%' }
                     , { field: 'answer', title: '答案', width: '8%', }
                     , { field: 'point', title: '分值', width: '8%', }
